naprawa faktury dodatki

--- a/npkpir_23/web/wspolny/sub/faktura/faktura_kadry.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_kadry.xhtml
@@ -70,14 +70,14 @@
                             </f:facet>
                             <h:outputText value="#{item111.symbolwaluty}"/>
                         </p:column>
-                        <p:column width="70" style="text-align: left;" sortBy="#{item111.ilosc}" 
+                        <p:column width="40" style="text-align: left;" sortBy="#{item111.ilosc}" 
                                   filterBy="#{item111.ilosc}" filterMatchMode="contains">
                             <f:facet name="header">
                                 <h:outputText value="ilosc"/>
                             </f:facet>
-                            <bcf:outputpl value="#{item111.ilosc}"/>
+                            <bcf:outputpl0 value="#{item111.ilosc}"/>
                         </p:column>
-                         <p:column width="70" style="text-align: center;" sortBy="#{item111.datazamkniecia}" sortOrder="asc"
+                         <p:column width="80" style="text-align: center;" sortBy="#{item111.datazamkniecia}" sortOrder="asc"
                                    filterBy="#{item111.datazamkniecia}" filterMatchMode="contains">
                             <f:facet name="header">
                                 <h:outputText value="data zamk."/>
