--- a/npkpir_23/web/ksiegowa/sub/layoutNowy/west.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutNowy/west.xhtml
@@ -48,6 +48,9 @@
 
                 <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="obroty w roku" outcome="obroty"  icon="ui-icon-circle-arrow-e" update="@form" />  
                 <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="kontrahenci fakt." outcome="klienci"  icon="ui-icon-circle-arrow-e"/>  
+                
+            </p:menu>
+            <p:menu>
                 <p:menuitem onclick="setBusyCursor();" oncomplete="removeBusyCursor();" global="true" value="zestaw. sumaryczne"  outcome="zestawienie" icon="ui-icon-circle-arrow-e"/>  
             </p:menu>
             <p:menu>
