--- a/npkpir_23/web/kadrowa/sub/dochoddladra.xhtml
+++ b/npkpir_23/web/kadrowa/sub/dochoddladra.xhtml
@@ -13,6 +13,9 @@
                 <p:outputPanel>
                     <f:view>
                         <h:form id="formtabela">
+                            <p:outputPanel>
+                                <h:outputText value="W przypadku przyjęcia firmy z historią w trakcie roku nalezy cofnąć sie i wygenerować wiersze dla poprzednich miesięcy. Program wartości narastająco bieże z tej tabeli" style="color:red;"/>
+                            </p:outputPanel>
                             <p:panelGrid layout="tabular" columns="12">
                                 <h:outputText value="rok deklaracji:" style="text-shadow: #6374AB 1px -1px 1px"/>
                                 <p:selectOneMenu id="rokWpisu" value="#{dochodDlaDRAView.rok}" style="width: 70px;">
