--- a/npkpir_23/web/wspolny/sub/fakturaustawienia.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturaustawienia.xhtml
@@ -21,6 +21,7 @@
         <ui:include src="faktura/faktura_wzor.xhtml"/>
         <ui:include src="faktura/faktura_rozmiary.xhtml"/>
         <ui:include src="faktura/faktura_elementyopcjonalne.xhtml"/>
+        <ui:include src="faktura/faktura_logo.xhtml"/>
         <ui:include src="faktura/faktura_elementygraficzne.xhtml"/>
         <ui:include src="faktura/faktura_danedofaktury.xhtml"/>
         <ui:include src="faktura/faktura_danedofaktury_xxl.xhtml"/>
