--- a/npkpir_23/web/wspolny/sub/faktura/faktura_elementyopcjonalne.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_elementyopcjonalne.xhtml
@@ -13,10 +13,13 @@
                     <h:outputText value="Wybierze elementy opcjonalne faktury"/>
                 </f:facet>
                 <p:column headerText="#{mgs.wybierzmcrok}" width="60">
-                    <p:selectBooleanCheckbox value="#{wpis.aktywny}" style="margin-left: 30%" rendered="#{wpis.fakturadodelementyPK.nazwaelementu ne 'logo'}">
+                    <p:selectBooleanCheckbox value="#{wpis.aktywny}" style="margin-left: 30%" rendered="#{wpis.fakturadodelementyPK.nazwaelementu ne 'logo' and wpis.fakturadodelementyPK.nazwaelementu ne 'element graficzny'}">
                         <p:ajax event="change" global="false" listener="#{fakturadodelementyView.zachowajzmiany()}"  update=":akordeon:formwzor"/>
                     </p:selectBooleanCheckbox>
-                    <p:selectBooleanCheckbox value="#{wpis.aktywny}" style="margin-left: 30%" rendered="#{wpis.fakturadodelementyPK.nazwaelementu eq 'logo' and fakturaelementygraficzneView.aktualnelogo() ne ''}">
+                    <p:selectBooleanCheckbox value="#{wpis.aktywny}" style="margin-left: 30%" rendered="#{wpis.fakturadodelementyPK.nazwaelementu eq 'logo' and fakturaelementygraficzneView.aktualnelogo ne ''}">
+                        <p:ajax event="change" global="false" listener="#{fakturadodelementyView.zachowajzmiany()}"  update=":akordeon:formwzor"/>
+                    </p:selectBooleanCheckbox>
+                    <p:selectBooleanCheckbox value="#{wpis.aktywny}" style="margin-left: 30%" rendered="#{wpis.fakturadodelementyPK.nazwaelementu eq 'element graficzny' and fakturaelementygraficzneView.aktualnyelementgraficzny ne ''}">
                         <p:ajax event="change" global="false" listener="#{fakturadodelementyView.zachowajzmiany()}"  update=":akordeon:formwzor"/>
                     </p:selectBooleanCheckbox>
                 </p:column>
@@ -24,13 +27,17 @@
                     <h:outputText value="#{wpis.fakturadodelementyPK.nazwaelementu}" style="#{wpis.fakturadodelementyPK.nazwaelementu eq 'Dane Odbiorcy'?'color:blue':null}"/>
                 </p:column>
                 <p:column headerText="tresc elementu" style="height: 60px;">
-                    <p:inputTextarea value="#{wpis.trescelementu}" cols="80" rendered="#{wpis.fakturadodelementyPK.nazwaelementu ne 'logo'}">
+                    <p:inputTextarea value="#{wpis.trescelementu}" cols="80" rendered="#{wpis.fakturadodelementyPK.nazwaelementu ne 'logo' and wpis.fakturadodelementyPK.nazwaelementu ne 'element graficzny'}">
                         <p:ajax event="change" global="false" listener="#{fakturadodelementyView.zachowajzmiany()}"  update=":akordeon:formwzor"/>
                     </p:inputTextarea>
-                    <h:outputText value="Na fakturze zostanie umieszczony załadowany plik graficzny" 
-                                  rendered="#{wpis.fakturadodelementyPK.nazwaelementu eq 'logo' and fakturaelementygraficzneView.aktualnelogo() ne ''}"/>
-                    <h:outputText value="Brak pliku graficznego do umieszczenia na fakturze" 
-                                  rendered="#{wpis.fakturadodelementyPK.nazwaelementu eq 'logo' and fakturaelementygraficzneView.aktualnelogo() eq ''}"/>
+                    <h:outputText value="Na fakturze zostanie umieszczony załadowany plik graficzny - logo" 
+                                  rendered="#{wpis.fakturadodelementyPK.nazwaelementu eq 'logo' and fakturaelementygraficzneView.aktualnelogo ne ''}"/>
+                    <h:outputText value="Brak pliku graficznego - logo do umieszczenia na fakturze" 
+                                  rendered="#{wpis.fakturadodelementyPK.nazwaelementu eq 'logo' and fakturaelementygraficzneView.aktualnelogo eq ''}"/>
+                    <h:outputText value="Na fakturze zostanie umieszczony dodatkowy załadowany plik graficzny" 
+                                  rendered="#{wpis.fakturadodelementyPK.nazwaelementu eq 'element graficzny' and fakturaelementygraficzneView.aktualnyelementgraficzny ne ''}"/>
+                    <h:outputText value="Brak dodatkowegopliku graficznego do umieszczenia na fakturze" 
+                                  rendered="#{wpis.fakturadodelementyPK.nazwaelementu eq 'element graficzny' and fakturaelementygraficzneView.aktualnyelementgraficzny eq ''}"/>
                 </p:column>
             </p:dataTable>
         </h:form>
