--- a/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
@@ -108,7 +108,7 @@
                 </p:column>
                 <p:column headerText="#{mgs.kontrahent}" width="120" sortBy="#{wpis.kontrahent.npelna}" filterBy="#{wpis.kontrahent.npelna}" filterMatchMode="contains" 
                           >
-                    <h:outputText value="#{wpis.kontrahent.npelna}" style="#{wpis.pozycjepokorekcie.size() > 0 ? 'color:red;' : null}; line-break: loose;word-break: break-all;word-wrap: break-word !important;"/>
+                    <h:outputText value="#{wpis.getKontrahentNazwa()}" style="#{wpis.pozycjepokorekcie.size() > 0 ? 'color:red;' : null}; line-break: loose;word-break: break-all;word-wrap: break-word !important;"/>
                     <h:outputText value=" - inny odbiorca " style="color: blue;" rendered="#{wpis.odbiorca ne null}"/>
                     <h:outputText value=" - polecający " style="color: blue;" rendered="#{wpis.kontrahent.polecajacy ne null}"/>
                 </p:column>
