--- a/npkpir_23/web/ksiegowa/sub/dokumentyzaksiegowane.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokumentyzaksiegowane.xhtml
@@ -180,9 +180,11 @@
                             <f:selectItems value="#{DokTabView.kontrahentypodatnika}" />
                         </p:selectOneMenu>
                     </f:facet>
-                    <h:outputText style="font-weight: bold;" value="#{wpis.kontr.nazwabezCudzy}" />
-                    <h:outputText value=" #{wpis.kontr.miejscowosc} - NIP #{wpis.kontr.nip}" rendered="#{!(wpis.kontr.nip eq '0000000000')}"/>
-                    <h:outputText value=" #{wpis.kontr.miejscowosc}" rendered="#{wpis.kontr.nip eq '0000000000'}"/>
+                    <h:outputText style="font-weight: bold;" value="#{wpis.kontr.nazwabezCudzy}" rendered="#{wpis.kontr ne null}"/>
+                    <h:outputText value=" #{wpis.kontr.miejscowosc} - NIP #{wpis.kontr.nip}" rendered="#{wpis.kontr ne null and !(wpis.kontr.nip eq '0000000000')}"/>
+                    <h:outputText value=" #{wpis.kontr.miejscowosc}" rendered="#{wpis.kontr ne null and wpis.kontr.nip eq '0000000000'}"/>
+                    <h:outputText style="font-weight: bold;" value="#{wpis.faktura.nazwiskoimieincydent}" rendered="#{wpis.kontr eq null}"/>
+                    <h:outputText value=" #{wpis.faktura.adres2}" rendered="#{wpis.kontr eq null}"/>
                 </p:column>
                 <p:column id="rodzTrColumn" filterBy="#{wpis.rodzajedok}" filterStyle="display : none;" filterMatchMode="contains" sortBy="#{wpis.rodzajedok}" style="width: 5%;text-align: center;" styleClass="hide-on-small">
                     <f:facet name="filter">
